--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "allowJs": true,
+        "allowJs": false,
         "module": "CommonJS",
         "target": "ES2022",
         "moduleResolution": "Node10",
@@ -9,7 +9,7 @@
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
         "resolveJsonModule": true,
-        "outDir": "tmp",
+        "outDir": "build",
         "baseUrl": ".",
         "paths": {
             "@spt-aki/*": ["./types/*"]
